GNOME Bugzilla – Bug 610925
GtkFileChooserDialog won't pick show-hidden setting from a GtkBuilder file
Last modified: 2015-07-24 02:00:10 UTC
When you create a filechooserdialog or a filechooserbutton the show hidden property is ignored (defaults to not, and shows them anyway). The property does however update if you change it.
This is still the case for Glade 3.18
Created attachment 306047 [details] show-hidden files test case I need to better explain the problem perhaps, I realize it's not so clear from the way I wrote it 5 years ago. Basically it doesn't matter which setting you choose in the builder file for show hidden files, at run-time Gtk+ won't pick it up. I'm attaching a gjs test case for reference.
According to tristan on IRC this bug belongs to Gtk+
The reason for this is that show-hidden is persisted in a setting, and the settings get loaded on map. show-hidden appears to be the only setting that is also programmatically settable and thus the only to have this problem. We could add an 'explicitly set' flag and ignore the setting in that case.
(In reply to Matthias Clasen from comment #4) > The reason for this is that show-hidden is persisted in a setting, and the > settings get loaded on map. show-hidden appears to be the only setting that > is also programmatically settable and thus the only to have this problem. We > could add an 'explicitly set' flag and ignore the setting in that case. FWIW I don't have strong opinions here, I just found it really odd that Glade would offer the switch and then was completely ignored.