file chooser: Fix gtk_file_chooser_set_show_hidden

We should not override an explicitly set show-hidden value
when loading the setting.

https://bugzilla.gnome.org/show_bug.cgi?id=610925